--- a/sync-waves/manifests.yaml
+++ b/sync-waves/manifests.yaml
@@ -14,8 +14,8 @@ spec:
           command: ["sleep", "20"]
       restartPolicy: Never
 ---
-apiVersion: batch/v1
-kind: Job
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
   name: backend
 spec:
