--- a/sync-waves/manifests.yaml
+++ b/sync-waves/manifests.yaml
@@ -11,7 +11,7 @@ spec:
       containers:
         - name: upgrade-sql-schema
           image: alpine:latest
-          command: ["sleep", "5"]
+          command: ["exit", "5"]
       restartPolicy: Never
 ---
 apiVersion: apps/v1
