--- a/sync-waves/manifests.yaml
+++ b/sync-waves/manifests.yaml
@@ -11,7 +11,7 @@ spec:
       containers:
         - name: upgrade-sql-schema
           image: alpine:latest
-          command: ["exit", "5"]
+          command: ["sleep", "5"]
       restartPolicy: Never
 ---
 apiVersion: apps/v1
@@ -31,7 +31,7 @@ spec:
       containers:
         - name: upgrade-sql-schema
           image: alpine:latest
-          command: ["sleep", "1m"]
+          command: ["sleep", "3m"]
 ---
 apiVersion: batch/v1
 kind: Job
@@ -70,7 +70,7 @@ spec:
       containers:
         - name: upgrade-sql-schema
           image: alpine:latest
-          command: ["sleep", "1m"]
+          command: ["sleep", "5m"]
 ---
 apiVersion: batch/v1
 kind: Job
@@ -86,5 +86,5 @@ spec:
       containers:
         - name: page-down
           image: alpine:latest
-          command: ["exit", "5"]
+          command: ["sleep", "5"]
       restartPolicy: Never
